--- a/share/proj_robot/10-planningDemo/MT.cfg
+++ b/share/proj_robot/10-planningDemo/MT.cfg
@@ -17,7 +17,7 @@ openGui = 1
 
 ## solver options
 
-aico_method = 3
+aico_sweepMode = 2
 aico_max_iterations = 100
 aico_tolerance = 1e-3
 aico_repeatThreshold = 1e-2
