system intro for students

--- a/share/test/09-joystickDemo/MT.cfg
+++ b/share/test/09-joystickDemo/MT.cfg
@@ -25,9 +25,9 @@ joyRate=.1
 maxJointStep = .01
 tenMilliSeconds = 10
 
-C0-Pgain = 32 64
+C0-Pgain = 64
 D-Igain = 4
-A0-Dgain = 4 3
+A0-Dgain = 3
 
 loadPlanned = 0
 plan_speed = 1 .3
