marc's opt. heuristic (2 steps);tweaks;cleanup
- marc's optimization heuristic implemented for mode5
- choosing sigma for analytical objects, which resembles the field
  behaviour of a random blob/potato object;

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 5
-shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 2 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
@@ -23,7 +23,7 @@ aico_damping = 1
 center = [ -.2 -.93 .80 ]
 orientation = [ 0 .5 .5 ]
 radius = .03
-sigma = .1
+sigma = 2
 height = .2
 
 gp_size = .1 
@@ -31,15 +31,15 @@ rnd_srfc_seed = 41
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec =  1e4 5e4 0 5e5		 5000a
-grasp_tv_opp_tip_prec = 5e-1 1e1 4e-2 1e1 0 4e3 6e2         a
-grasp_tv_opp_fng_prec = 1e-1 2e-2 4e3 6e2		0
-grasp_tv_zeroLevel_prec = 1e4 4e-1 4e2 0 4e5 1e2	40a
+grasp_tv_palm_prec =  1e3 5e4 0 5e5		 5000a
+grasp_tv_opp_tip_prec = 5e-2 1e1 4e-2 1e1 0 4e3 6e2         a
+grasp_tv_opp_fng_prec = 1e-2 2e-2 4e3 6e2		0
+grasp_tv_zeroLevel_prec = 3e3 4e-1 4e2 0 4e5 1e2	40a
 grasp_tv_ISF_col_prec		= 6e0 1e-1 1e4 9e3 4e4 0	.05a
-grasp_tv_tipAlign_prec =  3e1 1e0 1e4 9e3 4e4 0	1000a
+grasp_tv_tipAlign_prec =  3e0 1e0 1e4 9e3 4e4 0	1000a
 
 reachPlanTrajectoryLength = 20 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 2.5
 optTimeMin = 1.7
 alpha = 1e0 (6e-2 for 1step)
-BinvFactor = 1e1  (1e7 for 1step)
+BinvFactor = 1e2  (1e7 for 1step)
