fix target 0f zeroLevel_TV; play wit params ;

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 5
-shape = 2 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
@@ -38,8 +38,8 @@ grasp_tv_zeroLevel_prec = 3e3 4e-1 4e2 0 4e5 1e2	40a
 grasp_tv_ISF_col_prec		= 6e0 1e-1 1e4 9e3 4e4 0	.05a
 grasp_tv_tipAlign_prec =  3e0 1e0 1e4 9e3 4e4 0	1000a
 
-reachPlanTrajectoryLength = 20 1 100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 2.5
+reachPlanTrajectoryLength = 32 64 1 100 16 32 256 512 1024 32
+reachPlanTrajectoryTime = 3.5
 optTimeMin = 1.7
 alpha = 1e0 (6e-2 for 1step)
 BinvFactor = 1e2  (1e7 for 1step)
