--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 5
-shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 3 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
