playing with precisions..

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,17 +1,17 @@
 mode = 5
-shape = 3 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
 Wcost = 1e-1 1e3
 Hcost = 1e-1
 
-reachPlanHomeComfort = 1e-3
+reachPlanHomeComfort = 1e-2
 reachPlanMidPrec = 1e-10 1e-2 0
 reachPlanEndVelPrec = 1e-3
 
-reachPlanColPrec = 1e-2
-reachPlanLimPrec = 1e-1
+reachPlanColPrec = 1e0
+reachPlanLimPrec = 1e1
 
 aico_sweepMode = 3
 aico_max_iterations = 100
@@ -26,20 +26,20 @@ radius = .03
 sigma = 2
 height = .2
 
-gp_size = .1 
+gp_size = .12 
 rnd_srfc_seed = 41
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec =  1e3 5e4 0 5e5		 5000a
-grasp_tv_opp_tip_prec = 5e-2 1e1 4e-2 1e1 0 4e3 6e2         a
-grasp_tv_opp_fng_prec = 1e-2 2e-2 4e3 6e2		0
-grasp_tv_zeroLevel_prec = 3e3 4e-1 4e2 0 4e5 1e2	40a
-grasp_tv_ISF_col_prec		= 6e0 1e-1 1e4 9e3 4e4 0	.05a
-grasp_tv_tipAlign_prec =  3e0 1e0 1e4 9e3 4e4 0	1000a
+grasp_tv_palm_prec =  1e5 			5000a
+grasp_tv_opp_tip_prec = 2e1         a
+grasp_tv_opp_fng_prec = 1e1 		0
+grasp_tv_zeroLevel_prec = 8e2 		40a
+grasp_tv_ISF_col_prec	= 6e-1		.05a
+grasp_tv_tipAlign_prec =  3e4 		1000a
 
 reachPlanTrajectoryLength = 32 64 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.5
-optTimeMin = 1.7
-alpha = 1e0 (6e-2 for 1step)
+optTimeMin = 4.
+alpha = 4e-1 (6e-2 for 1step)
 BinvFactor = 1e2  (1e7 for 1step)
