playing with params

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 5
-shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 2 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
@@ -21,7 +21,7 @@ aico_display = 1 10
 aico_damping = 1
 
 center = [ -.2 -.93 .80 ]
-orientation = [ 0 .5 .5 ]
+orientation = [ 0 0 .5 ]
 radius = .03
 sigma = 2
 height = .2
@@ -32,14 +32,16 @@ rnd_srfc_seed = 41
 plotPotentialField = 0. .01 0.
 
 grasp_tv_palm_prec =  1e5 			5000a
-grasp_tv_opp_tip_prec = 2e1         a
-grasp_tv_opp_fng_prec = 1e1 		0
-grasp_tv_zeroLevel_prec = 8e2 		40a
+grasp_tv_opp_tip_prec = 2e2         a
+grasp_tv_opp_fng_prec = 3e1 		0
+grasp_tv_zeroLevel_prec = 1e6 		40a
 grasp_tv_ISF_col_prec	= 6e-1		.05a
-grasp_tv_tipAlign_prec =  3e4 		1000a
+grasp_tv_tipAlign_prec =  4e4 		1000a
 
-reachPlanTrajectoryLength = 32 64 1 100 16 32 256 512 1024 32
+reachPlanTrajectoryLength = 1 32 64 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.5
 optTimeMin = 4.
-alpha = 4e-1 (6e-2 for 1step)
+alpha = 1e0 (6e-2 for 1step)
+oneStep_tascCost_eps = 1e-1
+
 BinvFactor = 1e2  (1e7 for 1step)
