play with precisions: sphere and cyl

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -31,12 +31,12 @@ rnd_srfc_seed = 41
 
 plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec =  1e5 			5000a
-grasp_tv_opp_tip_prec = 2e2         a
-grasp_tv_opp_fng_prec = 3e1 		0
-grasp_tv_zeroLevel_prec = 1e6 		40a
-grasp_tv_ISF_col_prec	= 6e-1		.05a
-grasp_tv_tipAlign_prec =  4e4 		1000a
+grasp_tv_palm_prec =  5e3 			1000a
+grasp_tv_opp_tip_prec = 1e0         1a
+grasp_tv_opp_fng_prec = 3e-2 		.03a
+grasp_tv_zeroLevel_prec = 5e4 		20000a
+grasp_tv_ISF_col_prec	= 6e-3		.006a
+grasp_tv_tipAlign_prec =  4e2 		400a
 
 reachPlanTrajectoryLength = 1 32 64 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.5
