new object,some updated precidions and alpha

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -1,5 +1,5 @@
 mode = 5
-shape = 0 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
+shape = 4 3 2 0 1 # 0:sph 1:inf.cy 2:capp.c. 3:GP 4:GP&mesh from file
 gp_file = test.gp
 
 orsFile = schunk.ors
@@ -26,22 +26,22 @@ radius = .03
 sigma = 2
 height = .2
 
-gp_size = .12 
-rnd_srfc_seed = 41
+gp_size = .13 
+rnd_srfc_seed = 82
 
-plotPotentialField = 0. .01 0.
+plotPotentialField = .01 0.
 
-grasp_tv_palm_prec =  5e3 			5000a
-grasp_tv_opp_tip_prec = 1e0         1a
-grasp_tv_opp_fng_prec = 3e-2 		.03a
+grasp_tv_palm_prec =  8e3 			5000a
+grasp_tv_opp_tip_prec = 4e0         1a
+grasp_tv_opp_fng_prec = 3e-1 		.03a
 grasp_tv_zeroLevel_prec = 5e4 		50000a
 grasp_tv_ISF_col_prec	= 6e-3		.006a
-grasp_tv_tipAlign_prec =  4e2 		400a
+grasp_tv_tipAlign_prec =  8e2 		400a
 
 reachPlanTrajectoryLength = 1 32 64 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.5
 optTimeMin = 4.
-alpha = 1e0 (6e-2 for 1step)
+alpha = 5e-3 (6e-2 for 1step)
 oneStep_tascCost_eps = 5e-2
 
 BinvFactor = 1e2  (1e7 for 1step)
