three step grasping heuristic -- works quite ok for randomized positions & locations

--- a/usr/MT/11-graspOptimization/MT.cfg
+++ b/usr/MT/11-graspOptimization/MT.cfg
@@ -8,16 +8,16 @@ reachPlanTrajectoryLength = 32 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e1
 reachPlanMidPrec = 0
-reachPlanEndVelPrec = 1e4
+reachPlanEndVelPrec = 1e2
 reachPlanColPrec = 1e1 -1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 1e1
 
-aico_sweepMode = 1
+aico_sweepMode = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .1
-aico_display = 1 10
+aico_display = 10
 aico_damping = 1
 
 plotPotentialField = 0. .01 0.
