--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -20,7 +20,7 @@ aico_repeatThreshold = .01 .1
 aico_display = 1 10
 aico_damping = 1
 
-center = [ -.2 -.93 .80 ]
+center = [ .3 -.43 .80 ]
 orientation = [ 0 0 .5 ]
 radius = .03
 sigma = 2
@@ -29,14 +29,14 @@ height = .2
 gp_size = .13 
 rnd_srfc_seed = 82
 
-plotPotentialField = .01 0.
+plotPotentialField = 0. .01 0.
 
-grasp_tv_palm_prec =  8e3 			5000a
-grasp_tv_opp_tip_prec = 4e0         1a
+grasp_tv_palm_prec =  2e3 			5000a
+grasp_tv_opp_tip_prec = 8e0         1a
 grasp_tv_opp_fng_prec = 3e-1 		.03a
-grasp_tv_zeroLevel_prec = 5e4 		50000a
+grasp_tv_zeroLevel_prec = 4e4 		50000a
 grasp_tv_ISF_col_prec	= 6e-3		.006a
-grasp_tv_tipAlign_prec =  8e2 		400a
+grasp_tv_tipAlign_prec =  8e3 		400a
 
 reachPlanTrajectoryLength = 1 32 64 1 100 16 32 256 512 1024 32
 reachPlanTrajectoryTime = 3.5
