TV for approach dir; traslation of mesh+gp

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -25,6 +25,7 @@ orientation = [ 0 0 .5 ]
 radius = .03
 sigma = 2
 height = .2
+translation = [ -.3 .0 .0 ]
 
 gp_size = .13 
 rnd_srfc_seed = 82
@@ -32,6 +33,7 @@ rnd_srfc_seed = 82
 plotPotentialField = 0. .01 0.
 
 grasp_tv_palm_prec =  2e3 			5000a
+grasp_tv_appr_dir_prec =  2e3 			5000a
 grasp_tv_opp_tip_prec = 8e0         1a
 grasp_tv_opp_fng_prec = 3e-1 		.03a
 grasp_tv_zeroLevel_prec = 4e4 		50000a
