--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -1,10 +1,12 @@
-dynamic = 1
-Wcost = 1
-Hcost = 5e-4 1e-3
+dynamic = 0 1
 
-aico_sweepMode = 0
+Wrate = 1
+Hrate = 1e-1
+
+orsFile = test.ors
+
+aico_sweepMode = 1
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .1
 aico_display = 0
-aico_damping = 1
+aico_damping = .01
