added new var -- palm alignment with field

--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -25,7 +25,7 @@ orientation = [ 0 0 .5 ]
 radius = .03
 sigma = 2
 height = .2
-translation = [ -.3 .0 .0 ]
+translation = [ -.4 -.4 .3 ]
 
 gp_size = .13 
 rnd_srfc_seed = 82
@@ -33,15 +33,16 @@ rnd_srfc_seed = 82
 plotPotentialField = 0. .01 0.
 
 grasp_tv_palm_prec =  2e3 			2000a
+grasp_palmAlign_prec =	2e2
 grasp_tv_appr_dir_prec =  2e3 		2000a
-grasp_tv_opp_tip_prec = 8e0         8a
+grasp_tv_opp_tip_prec = 4e0         8a
 grasp_tv_opp_fng_prec = 3e-1 		.03a
 grasp_tv_zeroLevel_prec = 4e4 		40000a
 grasp_tv_ISF_col_prec	= 6e-3		.006a
 grasp_tv_tipAlign_prec =  8e3 		8000a
 
 reachPlanTrajectoryLength = 1 32 64 1 100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = 3.5
+reachPlanTrajectoryTime = 5.
 optTimeMin = 4.
 alpha = 5e-3 (6e-2 for 1step)
 oneStep_tascCost_eps = 5e-2
