ors test fixed and gradient checks build in soc test - but dont work

--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -1,11 +1,11 @@
-dynamic = 0 1
+dynamic = 1
 
 Wrate = 1
 Hrate = 1e-1
 
 orsFile = test.ors
 
-aico_sweepMode = 1
+aico_sweepMode = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_display = 0
