--- a/usr/MT/11-graspOptimization/MT.cfg
+++ b/usr/MT/11-graspOptimization/MT.cfg
@@ -1,8 +1,8 @@
 mode = 1
 
 orsFile = schunk.ors
-Wcost = 1e3
-Hcost = 1e-1
+Wrate = 1e3
+Hrate = 1e1
 
 reachPlanTrajectoryLength = 32 256 512 1024 32
 reachPlanHomeComfort = 1e-3
