--- a/share/robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/robot/10-optimizationBenchmarks/MT.cfg
@@ -12,7 +12,7 @@ reachPlanEndVelPrec = 1e-3
 reachPlanColPrec = 1e-2
 reachPlanLimPrec = 1e-1
 
-aico_method = 3
+aico_sweepMode = 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .01 .1
@@ -37,6 +37,6 @@ grasp_tv_zeroLevel_prec_m = 1e4 4e-1 4e2 0 4e5 1e2	40a
 grasp_tv_tipAlign_prec_m =  3e1 1e0 1e4 9e3 4e4 0	1000a
 
 reachPlanTrajectoryLength = 20 1 100 16 32 256 512 1024 32
-reachPlanTrajectoryTime = .5
+reachPlanTrajectoryTime = 3.5
 alpha = 1e0 (6e-2 for 1step)
 BinvFactor = 1e4  (1e7 for 1step)
