Parameter names have changed. (Wrate/Hrate)

--- a/share/test/09-joystickDemo/MT.cfg
+++ b/share/test/09-joystickDemo/MT.cfg
@@ -2,8 +2,8 @@ mode = 0
 
 ###########
 
-Wcost = 1e-2
-Hcost = 1e-3 1e-10 1e-3
+Wrate = 1e-0
+Hrate = 1e-1 1e-10 1e-3
 
 TV_x_yprec   = 1e3
 TV_x_vprec  = 1e0
