some changes on MT_NILS and CameraImages with Michael

--- a/share/src/NP/Makefile
+++ b/share/src/NP/Makefile
@@ -28,14 +28,16 @@ OBJS         = \
 
 OPENCV_UBUNTU=1
 FELZ = 1
-#ANN=1
+ANN=1
 
 #CXX	     = g++-4.3
 #LINK	     = g++-4.3
 
+CXXFLAGS += -DMT_BUMBLE -DNP_DC1394 
+
 # standard linker and compiler settings
-CXXFLAGS += -O3 -Wall -fPIC -DNP_DC1394 
-CXXFLAGS += -DMT_Linux -DMT_IMPLEMENT_TEMPLATES -DMT_BUMBLE -DMT_NO_GLOBALMEM
+CXXFLAGS += -O3 -Wall -fPIC
+CXXFLAGS += -DMT_Linux -DMT_IMPLEMENT_TEMPLATES -DMT_NO_GLOBALMEM
 CXXFLAGS += -DNP_IMPLEMENT_TEMPLATES
 LDFLAGS += -lrt $(LIBS)
 
