--- a/slices/libRoboticsCourse/Makefile
+++ b/slices/libRoboticsCourse/Makefile
@@ -28,4 +28,4 @@ doc::
 	make -C doc guide doxy
 
 zip::
-	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude "SHARE" --exclude ".git" --exclude "*.kdev4" --exclude "MT.log" --exclude "*solution*" --exclude "course/*/main.cpp" --exclude "*ODE_0.11/ode-0.11" --exclude "*ODE_0.11/include" --exclude "*ODE_0.11/lib" --exclude "*/IBDS*" --exclude "*ors_mesh*"
+	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude
