--- a/share/src/TL/Makefile
+++ b/share/src/TL/Makefile
@@ -9,13 +9,13 @@ OBJS := $(OBJS:%.cpp=%.o)
 OBJS_C  = $(shell find . -name '*.c')
 OBJS += $(OBJS_C:%.c=%.o)
 
+
+ODE = 1
+QHULL = 1
+SWIFT	= 1
+
 include $(BASE)/make-generic
 
-#ODE = 1
-# QHULL = 1
-# SWIFT	= 1
-
-# CXXFLAGS += -fPIC
 # CXXFLAGS += -DMT_Linux -DMT_IMPLEMENT_TEMPLATES -DMT_NO_GLOBALMEM
 #LDFLAGS += -lrt $(LIBS)
 
