--- a/projects/11-learningConcepts/Makefile
+++ b/projects/11-learningConcepts/Makefile
@@ -1,7 +1,11 @@
 # TODO MUSS NOCH ANGEPASST WERDEN
 # Tobias, 7 Nov 11
 
-BASE = ../..
+BASE = ../../share
+
+# OBJS = main.o \
+# 	$(BASE)/src/MT/array_instantiate.o \
+# 	$(BASE)/src/MT/array_t.o
 
 RELATIONAL = 1
 #ODE = 1
