ors scene graph editor first version works

--- a/share/extern/ODE_0.11/BUILD
+++ b/share/extern/ODE_0.11/BUILD
@@ -1,6 +1,3 @@
-wget http://sourceforge.net/projects/opende/files/ODE/0.11/ode-0.11.tar.gz/download
-tar xvzf download
-
 cd ode-0.11
 sh autogen.sh
 #./configure --help
@@ -8,10 +5,10 @@ sh autogen.sh
 make clean
 make
 
-cd ../../lib
-#rm -Rf lib include
-#mkdir lib include include/internal include/internal/joints
-#cp ode-0.11/ode/src/.libs/libode.a ode-0.11/ode/src/.libs/libfast.a lib
-#cp -R ode-0.11/include/ode include
-#cp -R ode-0.11/ode/src/*.h include/internal
-#cp -R ode-0.11/ode/src/joints/*.h include/internal/joints
+cd ..
+rm -Rf lib include
+mkdir lib include include/ode_internal include/ode_internal/joints
+cp ode-0.11/ode/src/.libs/libode.a ode-0.11/ode/src/.libs/libfast.a lib
+cp -R ode-0.11/include/ode include
+cp -R ode-0.11/ode/src/*.h include/ode_internal
+cp -R ode-0.11/ode/src/joints/*.h include/ode_internal/joints
