--- a/slices/libRoboticsCourse/Makefile
+++ b/slices/libRoboticsCourse/Makefile
@@ -25,7 +25,7 @@ cleanProjects::
 	-@find course -maxdepth 1 -follow -type d -not -name 'course' -not -name 'SHARE' -exec make -C {} clean \;
 
 doc::
-	make -C doc guide doxy
+	make -C doc doxy_array
 
 zip::
 	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude
