--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -13,7 +13,7 @@ ANN = 1
 QHULL = 1
 SWIFT = 1
 LAPACK = 1
-REVEL = 1
+#REVEL = 1
 ODE = 1
 
 TONY = 1
@@ -21,7 +21,7 @@ TONY = 1
 SCHUNK = 1
 PLIB = 1
 BUMBLE = 1
-URGLASER = 1
+#URGLASER = 1
 # CUDA = 1
 LEWINER = 1
 NIKOLAY = 1
