symbol grounding introduced

--- a/projects/11-learningConcepts/Makefile
+++ b/projects/11-learningConcepts/Makefile
@@ -4,8 +4,7 @@
 BASE = ../../share
 
 # OBJS = main.o \
-# 	$(BASE)/src/MT/array_instantiate.o \
-# 	$(BASE)/src/MT/array_t.o
+# 	symbolGrounding.o
 
 RELATIONAL = 1
 #ODE = 1
