--- a/slices/libMLcourse/src/MT/Makefile
+++ b/slices/libMLcourse/src/MT/Makefile
@@ -7,7 +7,7 @@ LIBS   += -lrt
 #OPTIM  = fast_debug
 OPTIM  = debug
 
-CXXFLAGS += -DMT_ORS_ONLY_BASICS -DMT_GLOBALMEM
+CXXFLAGS += -DMT_ORS_ONLY_BASICS -DMT_GLOBALMEM -DMT_NO_THREADS
 
 FREEGLUT = 1
 ANN = 1
