soc.h slighly cleaned for libAICO

--- a/share/proj_robot/10-optimizationBenchmarks/MT.cfg
+++ b/share/proj_robot/10-optimizationBenchmarks/MT.cfg
@@ -4,7 +4,7 @@ orsFile = schunk.ors
 Wrate = 1
 Hrate = 1
 
-reachPlanTrajectoryLength = 2 32 256 512 1024 32
+reachPlanTrajectoryLength = 256 512 1024 32
 reachPlanHomeComfort = 1e-3
 reachPlanEndPrec = 1e4
 reachPlanMidPrec = 0 1e-2
