--- a/slices/libAICO/src/MT/Makefile
+++ b/slices/libAICO/src/MT/Makefile
@@ -13,7 +13,7 @@ FREEGLUT = 1
 SWIFT = 1
 LAPACK = 1
 
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -DMT_NO_THREADS #causes all *.cpp to implement the used templates
 
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
