--- a/share/src/NJ/Makefile
+++ b/share/src/NJ/Makefile
@@ -2,12 +2,9 @@ BASE   = ../..
 NAME   = libnj
 OUTPUT = $(BASE)/lib/$(NAME).so
 
-CXXFLAGS += -fPIC
+MAKEMODE = mlrlib
 
-#CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
-OBJS  = $(shell find . \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
-OBJS_C  = $(shell find . -name '*.c')
-OBJS += $(OBJS_C:%.c=%.o)
 
 include $(BASE)/make-generic
