soc planning tests - bug fixed: getTransitionCostTerms uses now matrix inversion! costCheck works IFF not leap-frog but Euler!

--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -1,6 +1,6 @@
 dynamic = 1
 
-Wrate = 1e0
+Wrate = 1e2
 Hrate = 1e0
 
 orsFile = test.ors
@@ -11,4 +11,5 @@ aico_tolerance = 1e-2
 aico_display = 0
 aico_damping = .01
 
-time_steps = 10
+time_steps = 200
+time_duration = 3.
