--- a/projects/11-learningConcepts/Makefile
+++ b/projects/11-learningConcepts/Makefile
@@ -1,6 +1,3 @@
-# TODO MUSS NOCH ANGEPASST WERDEN
-# Tobias, 7 Nov 11
-
 BASE = ../../share
 
 # OBJS = main.o \
@@ -8,7 +5,7 @@ BASE = ../../share
 
 RELATIONAL = 1
 #ODE = 1
-FREEGLUT = 1
+# FREEGLUT = 1
 SWIFT   = 1
 QHULL   = 1
 
