computes now on ML-cluster 64bit

--- a/projects/11-learningConcepts/Makefile
+++ b/projects/11-learningConcepts/Makefile
@@ -4,9 +4,10 @@ BASE = ../../share
 
 RELATIONAL = 1
 #ODE = 1
-# FREEGLUT = 1
-SWIFT   = 1
-QHULL   = 1
+#FREEGLUT = 1
+#SWIFT   = 1
+#QHULL   = 1
+#MT = 1
 
 include $(BASE)/make-generic
 
