--- a/share/src/NP/Makefile
+++ b/share/src/NP/Makefile
@@ -10,9 +10,9 @@ OBJS         = \
 	camera.o \
 	pgr_conversions.o \
 	pgr_registers.o \
-	pgr_stereocam.o \
-	libcolorseg.o \
-	../MT/process.o
+	pgr_stereocam.o
+#	../MT/process.o
+#	libcolorseg.o \
 #	cvwindow.o \
 #	cvutils.o \
 #	calibrationimage.o \
@@ -28,13 +28,13 @@ OBJS         = \
 #	ucm.o \
 
 
-FELZ = 1
-ANN=1
+#FELZ = 1
+#ANN=1
 
 #CXX	     = g++-4.3
 #LINK	     = g++-4.3
 
-CXXFLAGS += -DMT_BUMBLE -DNP_DC1394 
+#CXXFLAGS += -DMT_BUMBLE -DNP_DC1394 
 
 # standard linker and compiler settings
 CXXFLAGS += -O3 -Wall -fPIC
