--- a/share/src/relational/Makefile
+++ b/share/src/relational/Makefile
@@ -2,23 +2,9 @@ BASE   = ../..
 NAME   = librelational
 OUTPUT = $(BASE)/lib/$(NAME).so
 
-#OPTIM = fast
+MAKEMODE = mlrlib
 
-CXXFLAGS += -fPIC -DMT_IMPLEMENT_TEMPLATES #causes all *.cpp to implement the used templates
-#CXXFLAGS += -fPIC 
-OBJS  = $(shell find . \( -name '*.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
-OBJS_C  = $(shell find . -name '*.c')
-OBJS += $(OBJS_C:%.c=%.o)
-
-#FREEGLUT = 1
-ODE = 1
-QHULL = 1
-SWIFT	= 1
-#SOIL = 1
 
 include $(BASE)/make-generic
-
-# CXXFLAGS += -DMT_Linux -DMT_IMPLEMENT_TEMPLATES -DMT_NO_GLOBALMEM
-#LDFLAGS += -lrt $(LIBS)
-
