--- a/share/test/grasp-ISF/MT.cfg
+++ b/share/test/grasp-ISF/MT.cfg
@@ -6,8 +6,8 @@ sigma = 5 .5  1 10
 height = .2
 shape = 0
 
-Hcost = 1e-2 1e-10 1e-3
-Wcost = 1e-1
+Hrate = 1e-2 1e-10 1e-3
+Wrate = 1e-1
 
 TV_col_yprec = 1e-1
 TV_skin_yprec = 1e3 1e2 1e3
