Cuda enabled in MT, SWIFT decomposer doesnt work, MT.cfg missed some parameters.

--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -6,6 +6,7 @@ MAKEMODE = mlrlib
 
 NILS = 1
 NIKOLAY = 1
+CUDA = 1
 
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
