Makefiles revisited and fixed -- IMPORTANT: make-config removed (copy make-config.default) and added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ z.*
 MT.log
 Makefile.dep
 
+%% IMPORTANT: individual compilation modes:
+share/make-config
 
 %% special:
 share/extern/tony_mdp/parser.tab.cpp
@@ -31,6 +33,7 @@ share/extern/ntcan
 share/extern/opencv-2.1
 share/extern/schunkLWA
 share/extern/schunkSDH-11-05-11
+share/extern/urg-0.0.2
 
 % Eclipse Files
 .cproject
