--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -8,10 +8,10 @@ MAKEMODE = mlrlib
 #if in doubt, you actually want to change make-config!
 #otherwise ask Marc
 
-NILS = 1
-NIKOLAY = 1
-DMITRY = 1
-STANIMIR = 1
+buildAndLink_NILS = 1
+buildAndLink_NIKOLAY = 1
+buildAndLink_DMITRY = 1
+buildAndLink_STANIMIR = 1
 
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
