--- a/projects/symbol-grounding/Makefile
+++ b/projects/symbol-grounding/Makefile
@@ -4,7 +4,7 @@
 
 BASE = ../../share
 
-LIBS += -lrelational
+LIBS += -lrelational -lmt
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 CUDA = 0
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
