first alife version

--- a/share/src/architecture/Makefile
+++ b/share/src/architecture/Makefile
@@ -1,5 +1,5 @@
 BASE   = ../..
-NAME   = lib$(shell basename $(PWD))
+NAME   = libarchitecture
 OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
