--- a/projects/new-architecture/Makefile
+++ b/projects/new-architecture/Makefile
@@ -1,5 +1,8 @@
 BASE = ../../share
 
+BUILDS += buildComponent/DZ
+BUILDS += buildComponent/architecture
+
 LIBS += -larchitecture
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
