first keyframe optimizer works

--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -9,10 +9,10 @@ Hrate = 1
 reachPlanTrajectoryLength  = 32
 reachPlanTrajectoryDuration = 4.
 
-reachPlanHomeComfort = 1e-3
-reachPlanEndPrec = 1e3
-reachPlanMidPrec = 0 1e-2
-reachPlanEndVelPrec = 1e4
-reachPlanColPrec = 1e-1
-reachPlanLimPrec = 1e3
-reachPlanPalmPrec = 0
+graspPlanEndEffPrec = 1e3
+graspPlanEndOppPrec = 1e1
+graspPlanEndAlignPrec = 1e3
+graspPlanGraspDistPrec = 1e2
+graspPlanColPrec = 1e-1
+graspPlanLimPrec = 1e3
+graspPlanHomePrec= 1e-3
