--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -1,6 +1,6 @@
 ors_file = schunk_no.ors
 
-Wrate = 1
+Wrate = 1e-2
 Hrate = 1
 
 
@@ -16,3 +16,12 @@ graspPlanGraspDistPrec = 1e2
 graspPlanColPrec = 1e-1
 graspPlanLimPrec = 1e3
 graspPlanHomePrec= 1e-3
+
+
+####
+
+aico_sweepMode = 0 3
+aico_max_iterations = 100
+aico_tolerance = 1e-2
+aico_display = 1
+aico_damping = .01
