--- a/usr/MT/11-graspHeuristics/MT.cfg
+++ b/usr/MT/11-graspHeuristics/MT.cfg
@@ -5,13 +5,22 @@ Wrate = 1e3
 Hrate = 1e2
 
 reachPlanTrajectoryLength = 64 256 512 1024 32
-reachPlanHomeComfort = 1e-3
+
+graspPlanEndEffPrec = 1e3
+graspPlanEndOppPrec = 1e1
+graspPlanEndAlignPrec = 1e3
+graspPlanGraspDistPrec = 1e2
+graspPlanColPrec = 1e1
+graspPlanLimPrec = 1e3
+graspPlanHomePrec= 1e-3
+
 reachPlanEndPrec = 1e1
 reachPlanMidPrec = 0
 reachPlanEndVelPrec = 1e2
 reachPlanColPrec = 1e1 -1
 reachPlanLimPrec = 1e3
 reachPlanPalmPrec = 1e1
+reachPlanHomeComfort = 1e-3
 
 aico_sweepMode = 0
 aico_max_iterations = 100
