grasp heuristic cleaned and fully added to MotionPrimitive

--- a/usr/MT/11-graspHeuristics/MT.cfg
+++ b/usr/MT/11-graspHeuristics/MT.cfg
@@ -1,18 +1,18 @@
 mode = 1
 
 orsFile = schunk.ors
-Wrate = 1e3
-Hrate = 1e2
+Wrate = 1e1
+Hrate = 1e0
 
 reachPlanTrajectoryLength = 64 256 512 1024 32
 
-graspPlanEndEffPrec = 1e3
-graspPlanEndOppPrec = 1e1
-graspPlanEndAlignPrec = 1e3
-graspPlanGraspDistPrec = 1e2
-graspPlanColPrec = 1e1
-graspPlanLimPrec = 1e3
-graspPlanHomePrec= 1e-3
+graspPlanEndEffPrec = 1e1
+graspPlanEndOppPrec = 1e-1
+graspPlanEndAlignPrec = 1e1
+graspPlanGraspDistPrec = 1e0
+graspPlanColPrec = 1e-1
+graspPlanLimPrec = 1e1
+graspPlanHomePrec= 1e-5
 
 reachPlanEndPrec = 1e1
 reachPlanMidPrec = 0
@@ -27,6 +27,6 @@ aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_repeatThreshold = .1
 aico_display = 10
-aico_damping = 1
+aico_damping = 1e-2
 
 plotPotentialField = 0. .01 0.
