new-architecture works with dynamic AICO, but the keyframe optimizer produces different pose to 11-graspHeuristic

--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -1,21 +1,21 @@
 ors_file = schunk_no.ors
 
-Wrate = 1e-2
-Hrate = 1
+Wrate = 1e1
+Hrate = 1e0
 
 
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength  = 32
+reachPlanTrajectoryLength  = 64 32
 reachPlanTrajectoryDuration = 4.
 
-graspPlanEndEffPrec = 1e3
-graspPlanEndOppPrec = 1e1
-graspPlanEndAlignPrec = 1e3
-graspPlanGraspDistPrec = 1e2
+graspPlanEndEffPrec = 1e1
+graspPlanEndOppPrec = 1e-1
+graspPlanEndAlignPrec = 1e1
+graspPlanGraspDistPrec = 1e0
 graspPlanColPrec = 1e-1
-graspPlanLimPrec = 1e3
-graspPlanHomePrec= 1e-3
+graspPlanLimPrec = 1e1
+graspPlanHomePrec= 1e-5
 
 
 ####
@@ -24,4 +24,4 @@ aico_sweepMode = 0 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_display = 1
-aico_damping = .01
+aico_damping = 1e-2
