new-arch generates exactly the same solution as 11-grashHeuristic

--- a/usr/MT/11-graspHeuristics/MT.cfg
+++ b/usr/MT/11-graspHeuristics/MT.cfg
@@ -5,6 +5,7 @@ Wrate = 1e1
 Hrate = 1e0
 
 reachPlanTrajectoryLength = 64 256 512 1024 32
+reachPlanTrajectoryDuration = 4.
 
 graspPlanEndEffPrec = 1e1
 graspPlanEndOppPrec = 1e-1
@@ -14,18 +15,10 @@ graspPlanColPrec = 1e-1
 graspPlanLimPrec = 1e1
 graspPlanHomePrec= 1e-5
 
-reachPlanEndPrec = 1e1
-reachPlanMidPrec = 0
-reachPlanEndVelPrec = 1e2
-reachPlanColPrec = 1e1 -1
-reachPlanLimPrec = 1e3
-reachPlanPalmPrec = 1e1
-reachPlanHomeComfort = 1e-3
 
 aico_sweepMode = 0
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_repeatThreshold = .1
 aico_display = 10
 aico_damping = 1e-2
 
