--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -1,5 +1,5 @@
-ors_file = schunk_no.ors
 
+ors_file = schunk.ors
 Wrate = 1e1
 Hrate = 1e0
 
@@ -23,5 +23,5 @@ graspPlanHomePrec= 1e-5
 aico_sweepMode = 0 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_display = 1
+aico_display = 10
 aico_damping = 1e-2
