--- a/usr/MT/11-graspHeuristics/Makefile
+++ b/usr/MT/11-graspHeuristics/Makefile
@@ -4,8 +4,8 @@ OBJS = main.o
 STANIMIR = 1
 DMITRY = 1
 
-BUILDS += buildComponent/architecture
-LIBS += -larchitecture
+BUILDS += buildComponent/motion
+LIBS += -lmotion
 
 include $(BASE)/make-generic
 
