MotionPrimitive|Planner parameters made public -- aico and setGraspGoal parameters still hidden

--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -6,8 +6,6 @@ Hrate = 1e0
 
 ############# for the pick/place trajectory planning
 
-reachPlanTrajectoryLength  = 64 32
-reachPlanTrajectoryDuration = 4.
 
 graspPlanEndEffPrec = 1e1
 graspPlanEndOppPrec = 1e-1
@@ -25,3 +23,14 @@ aico_max_iterations = 100
 aico_tolerance = 1e-2
 aico_display = 10
 aico_damping = 1e-2
+
+MotionPrimitive_verbose = 2
+MotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionPrimitive_TrajectoryLength  = 64 32
+MotionPrimitive_TrajectoryDuration = 4.
+
+MotionPlanner_verbose = 2
+MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+MotionPlanner_TrajectoryLength  = 64 32
+MotionPlanner_TrajectoryDuration = 4.
+
