basic feedback controller in new-arch works

--- a/projects/new-architecture/MT.cfg
+++ b/projects/new-architecture/MT.cfg
@@ -34,3 +34,6 @@ MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionPlanner_TrajectoryLength  = 64 32
 MotionPlanner_TrajectoryDuration = 4.
 
+Controller_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+Controller_tau = .01
+Controller_maxJointStep = .01
