--- a/share/Makefile
+++ b/share/Makefile
@@ -10,6 +10,7 @@ MLR_LIBS = \
 EXTERN = \
 	extern/libcolorseg/src \
 	extern/Lewiner \
+	extern/tony_mdp \
 	extern/SWIFT++_1.2/src \
 #	extern/SWIFT++_1.2/decomposer/src \
 
