--- a/share/test/schunk_arm/MT.cfg
+++ b/share/test/schunk_arm/MT.cfg
@@ -1,10 +1,10 @@
-mode 1
+mode = 1
 priority = 99
 
 Wcost = 1e-2
 
-openArm = 1
+openArm = 0
 
 schunkStepHorizon = 20
-schunkSendArmMotion = 1
+schunkSendArmMotion = 0
 schunkReadArmPositions = 0
