first perception test

--- a/share/test/perception_all/MT.cfg
+++ b/share/test/perception_all/MT.cfg
@@ -1,5 +1,6 @@
-percObjectType = [1 ];##ordered types of objects
-evisHsvTargets = [22 210 170 7 40 100] #orange
+percObjectType = [7 ];##ordered types of objects
+hsvMean = [10 210 170]
+hsvDeviation = [10 40 100]
 evisHsvTargets = [5 210 160 7 40 100] #dark red
 
 esaveImage = 1;
