first aweful version of pick-and-place with newArchitecture: transfer of shapes most pressing problem

--- a/slices/libbiros/use_cases/vision/Makefile
+++ b/slices/libbiros/use_cases/vision/Makefile
@@ -2,7 +2,7 @@ BASE = $(shell realpath ../..)
 
 OBJS = main.o processes.o extern/MT/libcolorseg.o
 
-OPENCV_UBUNTU = 1
+OPENCV = 1
 FELZ = 1
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -Iextern -Iextern/libcolorseg/include
