--- a/projects/SWP-useCases/vision/Makefile
+++ b/projects/SWP-useCases/vision/Makefile
@@ -2,7 +2,7 @@ BASE = ../../../share
 
 OBJS = main.o processes.o
 
-OPENCV_UBUNTU = 1
+OPENCV = 1
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
 include $(BASE)/make-generic
