--- a/share/test/motion_graspAction/Makefile
+++ b/share/test/motion_graspAction/Makefile
@@ -2,4 +2,6 @@ BASE = ../..
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
+LIBS += -lmotion -lhardware -lperception -lmt
+
 include $(BASE)/make-generic
