--- a/share/test/motion_graspAction/MT.cfg
+++ b/share/test/motion_graspAction/MT.cfg
@@ -21,12 +21,12 @@ aico_tolerance = 1e-2
 aico_display = 10
 aico_damping = 1e-2
 
-MotionPrimitive_verbose = 2
+MotionPrimitive_verbose = 0 2
 MotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionPrimitive_TrajectoryLength  = 64 32
 MotionPrimitive_TrajectoryDuration = 4.
 
-MotionPlanner_verbose = 2
+MotionPlanner_verbose = 0 2
 MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionPlanner_TrajectoryLength  = 64 32
 MotionPlanner_TrajectoryDuration = 4.
