first pick and place sequence -- I CHANGED BACK from q_real to q_reference...

--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -49,6 +49,16 @@ graspPlanHomePrec= 1e-5
 
 ####
 
+placeMidPrec = 0
+placeAlignmentPrec  = 1e1
+limPrec             = 1e1
+zeroQPrec           = 1e-5
+placePositionPrec   = 1e1
+placeUpDownVelocity = 0.2
+placeUpDownVelocityPrec = 1e1
+
+#################################################
+
 aico_sweepMode = 0 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
