pick and place - quite nice now

--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -39,31 +39,32 @@ Wrate = 1e1
 
 ############# for the pick/place trajectory planning
 
-graspPlanEndEffPrec = 1e1
-graspPlanEndOppPrec = 1e-1
-graspPlanEndAlignPrec = 1e1
-graspPlanGraspDistPrec = 1e0
+graspPlanPositionPrec = 1e1
+graspPlanOppositionPrec = 1e-1
+graspPlanAlignmentPrec = 1e1
+graspPlanFingerDistPrec = 1e0
 graspPlanColPrec = 1e-1
 graspPlanLimPrec = 1e1
-graspPlanHomePrec= 1e-5
+graspPlanZeroQPrec= 1e-5
 
 ####
 
 placeMidPrec = 0
 placeAlignmentPrec  = 1e1
-limPrec             = 1e1
-zeroQPrec           = 1e-5
+placePlanLimPrec             = 1e1
+placePlanZeroQPrec           = 1e-5
+placePlanColPrec    = 1e-1
 placePositionPrec   = 1e1
 placeUpDownVelocity = 0.2
 placeUpDownVelocityPrec = 1e1
 
 #################################################
 
-aico_sweepMode = 0 3
+aico_sweepMode = 3 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_display = 10
-aico_damping = 1e-2
+aico_display = 0
+aico_damping = 1e-1
 
 MotionPrimitive_verbose = 2
 MotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
