--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -60,21 +60,16 @@ placeUpDownVelocityPrec = 1e1
 
 #################################################
 
-aico_sweepMode = 3 3
+aico_sweepMode = 0 3
 aico_max_iterations = 100
 aico_tolerance = 1e-2
-aico_display = 0
+aico_display = 10
 aico_damping = 1e-1
 
-MotionPrimitive_verbose = 2
-MotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-MotionPrimitive_TrajectoryLength  = 64 32
-MotionPrimitive_TrajectoryDuration = 4.
-
-MotionPlanner_verbose = 2
-MotionPlanner_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
-MotionPlanner_TrajectoryLength  = 64 32
-MotionPlanner_TrajectoryDuration = 4.
+ActionToMotionPrimitive_verbose = 2
+ActionToMotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
+ActionToMotionPrimitive_TrajectoryLength  = 64 32
+ActionToMotionPrimitive_TrajectoryDuration = 4.
 
 Controller_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 Controller_tau = 0.01
