1) Cleaned libMLcourse, merged with hux (MSVC) 2) AICO: added possibility to prepare for changed task (see test/soc)

--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -62,6 +62,7 @@ placeUpDownVelocityPrec = 1e1
 
 aico_sweepMode = 0 3
 aico_max_iterations = 100
+aico_maxStepSize = 1.
 aico_tolerance = 1e-2
 aico_display = 0
 aico_damping = 1e-1
