--- a/slices/libMLcourse/Makefile
+++ b/slices/libMLcourse/Makefile
@@ -2,7 +2,7 @@ NAME   = $(shell basename $(PWD))
 
 ALL =	src/MT
 
-makeAll: $(ALL:%=make/%) tests courses
+makeAll: $(ALL:%=make/%) tests courses doc
 
 cleanAll: $(ALL:%=clean/%) cleanProjects
 
@@ -13,17 +13,17 @@ clean/%::
 	make clean -C $*
 
 tests::
-	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} \;
+	-@find -L test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} \;
 
 courses::
-	-@find course -maxdepth 1 -follow -type d -not -name 'course' -not -name 'SHARE' -exec make -C {} \;
+	-@find -L course -maxdepth 1 -follow -type d -not -name 'course' -not -name 'SHARE' -exec make -C {} \;
 
 cleanProjects::
-	-@find test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} clean \;
-	-@find course -maxdepth 1 -follow -type d -not -name 'course' -not -name 'SHARE' -exec make -C {} clean \;
+	-@find -L test -maxdepth 1 -follow -type d -not -name 'test' -not -name 'SHARE' -exec make -C {} clean \;
+	-@find -L course -maxdepth 1 -follow -type d -not -name 'course' -not -name 'SHARE' -exec make -C {} clean \;
 
 doc::
 	make -C doc doxy_array
 
 zip::
-	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude
+	cd ..;  rm -f $(NAME).tgz;  tar cvzf $(NAME).tgz $(NAME) --dereference --exclude-vcs --exclude-from tar.exclude --exclude-from $(NAME)/tar.exclude
