added reach function, same as grasp, but without attaching object and no close hand action

--- a/share/demo/motionPrimitives/MT.cfg
+++ b/share/demo/motionPrimitives/MT.cfg
@@ -58,6 +58,11 @@ placePositionPrec   = 1e1
 placeUpDownVelocity = 0.2
 placeUpDownVelocityPrec = 1e1
 
+####
+
+homingPlanMidPrec = 1e-1
+homingPlanEndPrec = 1e1
+
 #################################################
 
 aico_sweepMode = 0 3
