--- a/share/demo/pickAndPlace/Makefile
+++ b/share/demo/pickAndPlace/Makefile
@@ -2,8 +2,9 @@ BASE = ../..
 
 OBJS = main.o behaviors.o
 
-LIBS += -lhardware -lmotion -lperception
+#LIBS += -lhardware -lmotion -lperception
 
-OPENCV = 1
+#OPENCV = 1
+MAKEMODE = app
 
 include $(BASE)/make-generic
