--- a/share/demo/motionPrimitives/MT.cfg
+++ b/share/demo/motionPrimitives/MT.cfg
@@ -62,6 +62,7 @@ placeUpDownVelocityPrec = 1e1
 
 homingPlanMidPrec = 1e-1
 homingPlanEndPrec = 1e1
+homingPlanLimPrec = 1e1
 
 #################################################
 
