--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -5,8 +5,9 @@ Hrate = 1e0
 
 orsFile = test.ors
 
-aico_sweepMode = 3
+aico_sweepMode = 2
 aico_max_iterations = 100
+aico_maxStepSize = 1.
 aico_tolerance = 1e-2
 aico_display = 0
 aico_damping = .01
