AICO clean LQG mode added again - works quite smooth; but pickAndPlace demo was messed up!

--- a/share/demo/pickAndPlace/MT.cfg
+++ b/share/demo/pickAndPlace/MT.cfg
@@ -60,12 +60,13 @@ placeUpDownVelocityPrec = 1e1
 
 #################################################
 
-aico_sweepMode = 0 3
+aico_sweepMode = 4 0 3
 aico_max_iterations = 100
 aico_maxStepSize = 1.
 aico_tolerance = 1e-2
 aico_display = 0
 aico_damping = 1e-1
+aico_advanceBeliefBeyondXhat = 1
 
 ActionToMotionPrimitive_verbose = 0
 ActionToMotionPrimitive_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
