--- a/share/demo/pickAndPlace/Makefile
+++ b/share/demo/pickAndPlace/Makefile
@@ -4,7 +4,7 @@ OBJS = main.o behaviors.o
 
 #LIBS += -lhardware -lmotion -lperception
 
-#OPENCV = 1
+OPENCV = 1
 MAKEMODE = app
 
 include $(BASE)/make-generic
