--- a/share/test/soc/MT.cfg
+++ b/share/test/soc/MT.cfg
@@ -11,6 +11,7 @@ aico_maxStepSize = 1.
 aico_tolerance = 1e-2
 aico_display = 0
 aico_damping = .01
+aico_advanceBeliefBeyondXhat = 1
 
 time_steps = 200
 time_duration = 3.
