--- a/share/src/DZ/Makefile
+++ b/share/src/DZ/Makefile
@@ -1,10 +1,10 @@
 BASE   = ../..
-NAME   = libdz
+NAME   = libDZ
 OUTPUT = $(BASE)/lib/$(NAME).so
 
 MAKEMODE = mlrlib
 
-OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
 
 include $(BASE)/make-generic
